--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,7 +18,16 @@ jobs:
         with:
           context: .
           push: true
-          tags: your-registry/your-image-name:latest
+          tags: your-registry/oifey-bot:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: docker.io/bigjra/oifey-bot:latest
+        env:
+          DOCKER_BUILDKIT: 1
+          DOCKER_BUILDKIT_INLINE_CACHE: 1
         secrets:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
