--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+env:
+  DOCKER_BUILDKIT: 1
+  DOCKER_BUILDKIT_INLINE_CACHE: 1
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,22 +17,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Configure Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Set up Docker Buildx
+        run: docker buildx create --use
+
+      - name: Log in to Docker registry
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: your-registry/oifey-bot:latest
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: docker.io/bigjra/oifey-bot:latest
-        env:
-          DOCKER_BUILDKIT: 1
-          DOCKER_BUILDKIT_INLINE_CACHE: 1
-        secrets:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_AUTH: ${{ secrets.DOCKER_AUTH }}
+        run: docker buildx build --push --tag your-registry/your-username/your-image-name:latest .
