--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,4 +27,4 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and push Docker image
-        run: docker buildx build --push --tag your-registry/your-username/your-image-name:latest .
+        run: docker buildx build --push --tag docker.io/bigjra/oifey-bot:latest .
